change folio part

--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,7 @@ header .circle {
   left: 0;
   z-index: 2;
   color: var(--light-one);
-  background-color: rgba(120, 76, 251, 0.55);
+  background-color: rgba(56, 34, 121, 0.89);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -681,8 +681,12 @@ header .circle {
 
 .img-description {
   width: 100%;
+  text-align: center;
 }
-
+.img-description a 
+{
+  color: white;
+}
 .img-overlay h3 {
   font-weight: 600;
   text-transform: uppercase;
