--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 html {
@@ -934,7 +935,21 @@ header .circle {
   flex-wrap: wrap;
   margin-bottom: 0.5rem;
 }
-
+/* EDUCATION  */
+.education
+{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 2rem;
+}
+.education-flex
+{
+  display: flex;
+  flex-direction: column;
+  gap: .8rem;
+  background-color: var(--light-three);
+  padding: 2rem;
+}
 .blog-info h5 {
   color: var(--main-color);
   font-weight: 400;
@@ -1373,6 +1388,10 @@ header .circle {
   position: relative;
   margin-left: 2.5rem;
 }
+.fab, .far {
+  font-weight: 400;
+  color: wheat;
+}
 
 .back-btn {
   display: flex;
@@ -1664,34 +1683,20 @@ header .circle {
   .record-circle .sub-title {
     font-size: 0.9rem;
   }
-
+ 
   .blog-wrap {
     margin: 0.7rem 0.5rem;
   }
 
-  .blog-card {
-    max-width: 315px;
-  }
+ /* EDUCATION  */
+.education
+{
+ 
+  grid-template-columns: repeat(2,1fr);
+  
+}
 
-  .blog-image {
-    height: 200px;
-  }
-
-  .blog-content {
-    padding: 1.8rem 1.7rem 1.9rem 1.7rem;
-  }
-
-  .blog-info {
-    margin-bottom: 0.2rem;
-  }
-
-  .blog-info > * {
-    font-size: 0.75rem !important;
-  }
-
-  .blog-user i {
-    font-size: 0.8rem;
-  }
+.bl
 
   .blog-text {
     font-size: 0.9rem;
@@ -2226,6 +2231,14 @@ header .circle {
     padding: 0.8rem 1.4rem;
     margin: 0.25rem 0;
   }
+
+   /* EDUCATION  */
+.education
+{
+ 
+  grid-template-columns: 1fr;
+  
+}
 }
 
 /* End Responsive */
